--- a/style.css
+++ b/style.css
@@ -27,6 +27,32 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 70%;
+}
+.new-chat .no-message .starting-topic {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 30px;
+}
+.new-chat .no-message .starting-topic button {
+  padding: 20px;
+  font-family: "noto", "sans-serif";
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  background-color: #2E6FF4;
+  color: #F6F8FC;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.new-chat .no-message .starting-topic button:hover {
+  background-color: #0c53e3;
+  transform: scale3d(1.1, 1.1, 1.1);
 }
 .new-chat .no-message h1 {
   color: #262F44;
@@ -61,9 +87,11 @@ body {
   border-radius: 20px;
   font-size: 1rem;
   overflow-y: hidden;
+  resize: none;
 }
 .input-chat:has(textarea:focus) {
   border-color: #2E6FF4;
+  resize: none;
 }
 .input-chat button {
   width: 32px;
