--- a/style.scss
+++ b/style.scss
@@ -31,6 +31,32 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 70%;
+        .starting-topic {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 30px;
+            button {
+                padding: 20px;
+                font-family: 'noto', 'sans-serif';
+                font-size: 1rem;
+                border: none;
+                outline: none;
+                background-color: $primary;
+                color: $white;
+                border-radius: 20px;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                &:hover {
+                    background-color: darken($primary, 10%);
+                    transform: scale3d(1.1, 1.1, 1.1);
+                }
+            }
+        }
         h1 {
             color: $font-color;
             font-size: 1.5rem;
@@ -65,9 +91,11 @@ body {
         border-radius: 20px;
         font-size: 1rem;
         overflow-y: hidden;
+        resize: none;
     }
     &:has(textarea:focus) {
         border-color: $primary;
+        resize: none;
     
     }
     
