--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,13 @@ $white: #F6F8FC;
 $primary: #2E6FF4;
 $gray:#E0E6EE;
 
+// darkmode
+$dark-bg-color: #13182B;
+$dark-font-color: #F6F8FC;
+$dark-strok-1: #58647C;
+$dark-white: #262F44;
+
+
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +23,7 @@ $gray:#E0E6EE;
 }
 body {
     font-family: 'Noto', sans-serif;
-    background-color: $bg-color;
+    background-color: $dark-bg-color;
     position: relative;
     height: 100vh;
     overflow: hidden;
@@ -58,7 +65,7 @@ body {
             }
         }
         h1 {
-            color: $font-color;
+            color: $dark-font-color;
             font-size: 1.5rem;
             margin-top: 1rem;
         }
@@ -68,12 +75,12 @@ body {
     position: fixed;
     bottom: 5%;
     left: 5%;
-    background-color: $white;
+    background-color: $dark-white;
     min-height: 42px;
     z-index: 1000;
     // height: fit-content;
     border-radius: 30px;
-    border: 1px solid $strok-1;
+    border: 1px solid $dark-strok-1;
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -86,12 +93,16 @@ body {
         height: 24px;
         border: none;
         outline: none;
-        background-color: $white;
+        background-color: $dark-white;
         padding: 0 10px;
         border-radius: 20px;
         font-size: 1rem;
-        overflow-y: hidden;
+        overflow-y: auto;
         resize: none;
+        color: $white;
+        &::-webkit-scrollbar {
+            width: 5px;
+        }
     }
     &:has(textarea:focus) {
         border-color: $primary;
@@ -128,7 +139,7 @@ body {
     left: 5%;
     width: 90%;
     bottom: calc(5% + 42px + 20px);
-    background-color: $white;
+    background-color: none;
     border-radius: 20px;
     border: 1px solid $strok-1;
     overflow-y: auto;
@@ -144,7 +155,7 @@ body {
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            background-color: $bg-color;
+            background-color: none;
             display: flex;
             justify-content: center;
             align-items: center;
