--- a/style.scss
+++ b/style.scss
@@ -31,12 +31,13 @@ body {
 .new-chat {
     display: flex;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
     height: 100vh;
     .no-message {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        // justify-content: center;
+        margin-top: 30%;
         align-items: center;
         width: 70%;
         .starting-topic {
@@ -102,6 +103,10 @@ body {
         color: $white;
         &::-webkit-scrollbar {
             width: 5px;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: $dark-white;
+            border-radius: 10px;
         }
     }
     &:has(textarea:focus) {
@@ -195,5 +200,12 @@ body {
             word-wrap: break-word;
             font-size: .8rem;
         }
+    }
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: none;
+        border-radius: 10px;
     }
 }
